--- a/themes/butterfly/layout/includes/widget/index.pug
+++ b/themes/butterfly/layout/includes/widget/index.pug
@@ -13,6 +13,8 @@
           include ./card_post_toc.pug
         !=partial('includes/widget/card_recent_post', {}, {cache: true})
         !=partial('includes/widget/card_ad', {}, {cache: true})
+        !=partial('includes/widget/card_bottom_self', {}, {cache: true})
+
   else
     //- page
     !=partial('includes/widget/card_author', {}, {cache: true})
